--- a/PORT.html
+++ b/PORT.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -15,6 +16,8 @@
       --btn-hover: #12ce3b;
       --section-bg: #ffffff;
       --body-bg: #f4f7fb;
+      --shadow-light: rgba(0, 0, 0, 0.1);
+      --shadow-dark: rgba(0, 0, 0, 0.2);
     }
 
     * {
@@ -33,43 +36,50 @@
     header {
       background: linear-gradient(135deg, rgb(19, 150, 69) 0%, rgb(26, 106, 172) 100%);
       color: var(--text-light);
-      padding: 100px 20px;
+      padding: 120px 20px;
       text-align: center;
     }
 
     header h1 {
-      font-size: 7.5em;
-      font-weight: 400;
+      font-size: 5em;
+      font-weight: 600;
       margin-bottom: 10px;
+      text-transform: uppercase;
+      letter-spacing: 2px;
     }
 
     header p {
-      font-size: 1.2em;
+      font-size: 1.75em;
       opacity: 0.9;
+      font-weight: 400;
     }
 
     nav {
       background-color: var(--accent-color);
       text-align: center;
       padding: 15px 10px;
-      box-shadow: 0 2px 6px rgba(145, 48, 48, 0.1);
+      box-shadow: 0 2px 6px var(--shadow-light);
       position: sticky;
       top: 0;
       z-index: 1000;
+      margin-top: 10px;
     }
 
     nav a {
       display: inline-block;
       color: #333;
       text-decoration: none;
-      margin: 10px 15px;
+      margin: 10px 20px;
       font-weight: 600;
-      font-size: 1em;
-      transition: color 0.3s ease, transform 0.2s ease;
+      font-size: 1.1em;
+      padding: 10px 20px;
+      border-radius: 30px;
+      transition: color 0.3s ease, background-color 0.3s ease, transform 0.3s ease;
     }
 
     nav a:hover {
-      color: #0077b6;
+      background-color: #0077b6;
+      color: white;
       transform: scale(1.05);
     }
 
@@ -79,11 +89,11 @@
       padding: 40px 20px;
       background: var(--section-bg);
       border-radius: 12px;
-      box-shadow: 0 4px 16px rgba(0, 0, 0, 0.08);
+      box-shadow: 0 4px 16px var(--shadow-light);
     }
 
     h2 {
-      font-size: 2em;
+      font-size: 2.5em;
       color: var(--primary-color);
       text-align: center;
       margin-bottom: 20px;
@@ -93,6 +103,7 @@
       text-align: center;
       max-width: 800px;
       margin: 0 auto;
+      font-size: 1.1em;
     }
 
     .skills-list {
@@ -110,12 +121,14 @@
       border-radius: 20px;
       font-weight: 500;
       color: #222;
-      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
-      transition: transform 0.3s ease;
+      box-shadow: 0 2px 6px var(--shadow-dark);
+      transition: transform 0.3s ease, background-color 0.3s ease;
     }
 
     .skills-list li:hover {
-      transform: scale(1.05);
+      transform: scale(1.1);
+      background-color: #0077b6;
+      color: white;
     }
 
     .resume-btn {
@@ -125,7 +138,7 @@
       color: var(--text-light);
       text-decoration: none;
       border-radius: 30px;
-      font-size: 1.1em;
+      font-size: 1.2em;
       font-weight: 600;
       transition: background-color 0.3s, transform 0.2s ease;
     }
@@ -177,7 +190,7 @@
 
     @media (max-width: 768px) {
       header h1 {
-        font-size: 2.5em;
+        font-size: 3.5em;
       }
 
       nav a {
@@ -189,135 +202,153 @@
         flex-direction: column;
         align-items: center;
       }
-    }
-
-    @media (max-width: 480px) {
-      h2 {
-        font-size: 1.6em;
-      }
-
-      header p {
-        font-size: 1em;
-      }
 
       section {
         padding: 30px 15px;
       }
+
+      h2 {
+        font-size: 2em;
+      }
+    }
+
+    @media (max-width: 480px) {
+      header h1 {
+        font-size: 2.5em;
+      }
+
+      nav a {
+        padding: 10px 15px;
+        font-size: 0.9em;
+      }
+
+      section {
+        padding: 20px;
+      }
+
+      .skills-list li {
+        font-size: 0.9em;
+        padding: 10px 15px;
+      }
     }
   </style>
 </head>
+
 <body>
 
-<header>
-  <h1>Nikhil Pradhan</h1>
-  <p>Software Developer | Java, Python, Django, ML Enthusiast</p>
-</header>
+  <header>
+    <h1>Nikhil Pradhan</h1>
+    <p><i>"In the realm of technology, a robust work ethic and unwavering honesty are as fundamental as the code we craft—these principles constitute the very foundation of trust, especially in times of adversity."</i></p>
+  </header>
 
-<nav>
-  <a href="#about">About</a>
-  <a href="#skills">Skills</a>
-  <a href="#education">Education</a>
-  <a href="#experience">Experience</a>
-  <a href="#resume">Resume</a>
-  <a href="#contact">Contact</a>
-</nav>
+  <nav>
+    <a href="#about">About</a>
+    <a href="#skills">Skills</a>
+    <a href="#education">Education</a>
+    <a href="#experience">Experience</a>
+    <a href="#resume">Resume</a>
+    <a href="#contact">Contact</a>
+  </nav>
 
-<section id="about" class="scroll-reveal">
-  <h2>About Me</h2>
-  <p>Hi, I'm Nikhil Pradhan, a passionate software developer who thrives in creating solutions that solve real-world problems. I graduated with a Master's degree in Computer Applications (MCA) from RV College of Engineering...</p>
-</section>
+  <section id="about" class="scroll-reveal">
+    <h2>About Me</h2>
+    <p style="text-align: justify;">I am Nikhil Pradhan, a results-driven software developer with a passion for solving complex problems and delivering impactful solutions. I thrive in fast-paced environments, constantly seeking new challenges to push the limits of my skills and expertise. My focus is on creating efficient, scalable systems that not only meet but exceed expectations. Committed to continuous growth, I bring a combination of strategic thinking, technical know-how, and a relentless drive to turn ideas into reality, making a meaningful impact in every project I undertake.</p>
+  </section>
 
-<section id="skills" class="scroll-reveal">
-  <h2>Skills</h2>
-  <ul class="skills-list">
-    <li>Java</li>
-    <li>Java EE</li>
-    <li>Python</li>
-    <li>Spring Boot</li>
-    <li>Django</li>
-    <li>Celery</li>
-    <li>RabbitMQ</li>
-    <li>Machine Learning</li>
-    <li>HTML</li>
-    <li>CSS</li>
-    <li>JavaScript</li>
-    <li>PostgreSQL</li>
-    <li>MySQL</li>
-  </ul>
-</section>
+  <section id="skills" class="scroll-reveal">
+    <h2>Skills</h2>
+    <ul class="skills-list">
+      <li>Java</li>
+      <li>Java EE</li>
+      <li>Python</li>
+      <li>Spring Boot</li>
+      <li>Django</li>
+      <li>RestAPI</li>
+      <li>Celery</li>
+      <li>RabbitMQ</li>
+      <li>Machine Learning</li>
+      <li>HTML</li>
+      <li>CSS</li>
+      <li>JavaScript</li>
+      <li>PostgreSQL</li>
+      <li>Git/</li>
+      <li>MySQL</li>
+    </ul>
+  </section>
 
-<section id="education" class="scroll-reveal">
-  <h2>Education</h2>
-  <ul>
-    <li><strong>MCA</strong> - RV College of Engineering------(2021–2023)</li>
-    <li><strong>BCA</strong> - Veer Kunwar Singh University---(2016–2019)</li>
-  </ul>
-</section>
+  <section id="education" class="scroll-reveal">
+    <h2>Education</h2>
+    <ul>
+      <li><strong>MCA</strong> - RV College of Engineering (2021–2023)</li>
+      <li><strong>BCA</strong> - Veer Kunwar Singh University (2016–2019)</li>
+    </ul>
+  </section>
 
-<section id="experience" class="scroll-reveal">
-  <h2>Experience</h2>
-  <p><strong>VeeGee Industries</strong> (1 Year) - Software Developer</p>
-  <ul>
-    <li>Developed and maintained backend systems using Python, Django and PostgreSQL.</li>
-    <li>Designed and implemented RESTful APIs and internal automation tools.</li>
-    <li>Collaborated with cross-functional teams to deliver high-quality software on time.</li>
-  </ul>
-</section>
+  <section id="experience" class="scroll-reveal">
+    <h2>Experience</h2>
+    <p><strong>VeeGee Industries</strong> (1 Year) - Software Developer</p>
+    <ul>
+      <li>Developed and maintained backend systems using Python, Django, and PostgreSQL.</li>
+      <li>Designed and implemented RESTful APIs and internal automation tools.</li>
+      <li>Collaborated with cross-functional teams to deliver high-quality software on time.</li>
+    </ul>
+  </section>
 
-<section id="resume" class="scroll-reveal">
-  <h2>Resume</h2>
-  <p><a href="resume.pdf" class="resume-btn" download>📄 Download My Resume</a></p>
-</section>
+  <section id="resume" class="scroll-reveal">
+    <h2>Resume</h2>
+    <p><a href="resume.pdf" class="resume-btn" download>📄 Download My Resume</a></p>
+  </section>
 
-<section id="contact" class="scroll-reveal">
-  <h2>Contact</h2>
-  Email: <a href="imnikhilpradhan@gmail.com">imnikhilpradhan@gmail.com</a><br>
-     LinkedIn: <a href="#">LinkedIn</a><br>
-     GitHub: <a href="https://github.com/nikhilcode-decode/">https://github.com/nikhilcode-decode/</a></p>
-</section>
+  <section id="contact" class="scroll-reveal">
+    <h2>Contact</h2>
+    Email: <a href="mailto:imnikhilpradhan@gmail.com">imnikhilpradhan@gmail.com</a><br>
+    LinkedIn: <a href="#">LinkedIn</a><br>
+    GitHub: <a href="https://github.com/nikhilcode-decode/">https://github.com/nikhilcode-decode/</a></p>
+  </section>
 
-<footer>
-  <p>&copy; 2025 Nikhil Pradhan | All Rights Reserved</p>
-</footer>
+  <footer>
+    <p>&copy; 2025 Nikhil Pradhan | All Rights Reserved</p>
+  </footer>
 
-<!-- Back to top button -->
-<button id="backToTop" title="Go to top">↑</button>
+  <!-- Back to top button -->
+  <button id="backToTop" title="Go to top">↑</button>
 
-<!-- JavaScript -->
-<script>
-  // Smooth scrolling
-  document.querySelectorAll('nav a').forEach(anchor => {
-    anchor.addEventListener('click', function (e) {
-      e.preventDefault();
-      const target = document.querySelector(this.getAttribute('href'));
-      target.scrollIntoView({ behavior: 'smooth' });
+  <!-- JavaScript -->
+  <script>
+    // Smooth scrolling
+    document.querySelectorAll('nav a').forEach(anchor => {
+      anchor.addEventListener('click', function (e) {
+        e.preventDefault();
+        const target = document.querySelector(this.getAttribute('href'));
+        target.scrollIntoView({ behavior: 'smooth' });
+      });
     });
-  });
 
-  // Scroll reveal animation
-  const sections = document.querySelectorAll('.scroll-reveal');
-  const reveal = () => {
-    const triggerBottom = window.innerHeight * 0.85;
-    sections.forEach(section => {
-      const sectionTop = section.getBoundingClientRect().top;
-      if (sectionTop < triggerBottom) {
-        section.classList.add('visible');
-      }
+    // Scroll reveal animation
+    const sections = document.querySelectorAll('.scroll-reveal');
+    const reveal = () => {
+      const triggerBottom = window.innerHeight * 0.85;
+      sections.forEach(section => {
+        const sectionTop = section.getBoundingClientRect().top;
+        if (sectionTop < triggerBottom) {
+          section.classList.add('visible');
+        }
+      });
+    };
+    window.addEventListener('scroll', reveal);
+    window.addEventListener('load', reveal);
+
+    // Back to top button
+    const backToTopBtn = document.getElementById("backToTop");
+    window.addEventListener("scroll", () => {
+      backToTopBtn.style.display = window.scrollY > 300 ? "block" : "none";
     });
-  };
-  window.addEventListener('scroll', reveal);
-  window.addEventListener('load', reveal);
 
-  // Back to top button
-  const backToTopBtn = document.getElementById("backToTop");
-  window.addEventListener("scroll", () => {
-    backToTopBtn.style.display = window.scrollY > 300 ? "block" : "none";
-  });
-
-  backToTopBtn.addEventListener("click", () => {
-    window.scrollTo({ top: 0, behavior: "smooth" });
-  });
-</script>
+    backToTopBtn.addEventListener("click", () => {
+      window.scrollTo({ top: 0, behavior: "smooth" });
+    });
+  </script>
 
 </body>
+
 </html>
